[fix] Another z-index issue regarding embed navigation

--- a/jekyll/_sass/_embed.scss
+++ b/jekyll/_sass/_embed.scss
@@ -1,9 +1,11 @@
+$embed-z-index: 9999;
+
 #embed-nav-trigger-container {
     position: fixed;
     width: 100%;
     background: #fff;
     padding: 15px 43px;
-    z-index: 9999; /* top most! */
+    z-index: $embed-z-index; /* top most! */
 
     .title {
         font-weight: bold;
@@ -26,16 +28,6 @@
     width: 100%;
     height: 100%;
     overflow:auto;
-	padding: 30px 20px 20px;
-}
-
-#embed-nav-close {
-    color: $heading-color;
-    font-size: 20px !important;
-    text-decoration: none;
-    padding: 0 !important;
-
-    i::before {
-        content: '\00D7'!important;
-    }
+	padding: 66px 20px 30px 20px;
+    z-index: $embed-z-index - 1;
 }
